@@ -14,6 +14,7 @@ import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -58,8 +59,8 @@ public class SwaggerConfiguration {
 				.apis(RequestHandlerSelectors.basePackage("com.tsp.new_tsp_front.api"))
 				.paths(PathSelectors.ant("/api/**"))
 				.build()
-				.securityContexts(List.of(securityContext()))
-				.securitySchemes(List.of(apikey()));
+				.securityContexts(Arrays.asList(securityContext()))
+				.securitySchemes(Arrays.asList(apikey()));
 	}
 
 	/**
@@ -86,6 +87,6 @@ public class SwaggerConfiguration {
 		AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
 		AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
 		authorizationScopes[0] = authorizationScope;
-		return List.of(new SecurityReference("JWT", authorizationScopes));
+		return Arrays.asList(new SecurityReference("JWT", authorizationScopes));
 	}
 }
